@@ -1,42 +1,31 @@
 package Presentation;
 
-import Domain.Employee;
-import Domain.Position;
-import Domain.Shift;
+import Service.EmployeeDTO;
 import Service.EmployeeService;
+import Service.ShiftDTO;
 import Service.ShiftService;
-
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.Scanner;
+import java.util.stream.Collectors;
 
-/**
- * Screen for viewing shift history
- * Implements high cohesion by focusing only on displaying shift history
- */
-public class ShiftHistoryScreen {
+
+public class ShiftHistoryScreen extends BaseScreen {
     private final EmployeeService employeeService;
     private final ShiftService shiftService;
-    private final Scanner scanner;
     private final DateTimeFormatter dateFormatter;
 
-    /**
-     * Constructor - receives employee and shift services as dependencies
-     * @param employeeService The employee service
-     * @param shiftService The shift service
-     */
+
     public ShiftHistoryScreen(EmployeeService employeeService, ShiftService shiftService) {
         this.employeeService = employeeService;
         this.shiftService = shiftService;
-        this.scanner = new Scanner(System.in);
         this.dateFormatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
     }
 
-    /**
-     * Display the main shift history screen
-     */
+
+    @Override
     public void display() {
         String[] options = {
                 "View All Historic Shifts",
@@ -69,12 +58,10 @@ public class ShiftHistoryScreen {
         } while (choice != 0);
     }
 
-    /**
-     * Display all historic shifts (shifts from the past)
-     */
+
     private void displayHistoricShifts() {
         displayTitle("Historic Shifts");
-        List<Shift> historicShifts = shiftService.getHistoricalShifts();
+        List<ShiftDTO> historicShifts = shiftService.getHistoricalShifts();
         if (historicShifts.isEmpty()) {
             displayMessage("No historic shifts in the system");
             return;
@@ -82,24 +69,21 @@ public class ShiftHistoryScreen {
         // Sort shifts by date
         historicShifts.sort((s1, s2) -> s2.getDate().compareTo(s1.getDate())); // Newest first
         // Display shifts in list format
-        for (Shift shift : historicShifts) {
-            String shiftType = shift.getShiftType().toString();
-            displayMessage(shift.getDate().format(dateFormatter) + " - " + shiftType +
+        for (ShiftDTO shift : historicShifts) {
+            displayMessage(shift.getDate().format(dateFormatter) + " - " + shift.getShiftType() +
                     " (ID: " + shift.getId() + ")");
         }
     }
-    /**
-     * Display shift history for a specific employee
-     */
+
     private void displayEmployeeShiftHistory() {
         displayTitle("Employee Shift History");
         // Select employee
-        Employee employee = selectEmployee();
+        EmployeeDTO employee = selectEmployee();
         if (employee == null) {
             return;
         }
         // Get shift history for employee
-        List<Shift> employeeShifts = shiftService.getEmployeeShiftHistory(employee.getId());
+        List<ShiftDTO> employeeShifts = shiftService.getEmployeeShiftHistory(employee.getId());
 
         if (employeeShifts.isEmpty()) {
             displayMessage("No shift history found for employee: " + employee.getFullName());
@@ -109,35 +93,31 @@ public class ShiftHistoryScreen {
         employeeShifts.sort((s1, s2) -> s2.getDate().compareTo(s1.getDate())); // Newest first
         displayTitle("Shift History for " + employee.getFullName());
         // Display shifts
-        for (Shift shift : employeeShifts) {
-            String shiftType = shift.getShiftType().toString();
+        for (ShiftDTO shift : employeeShifts) {
             // Find position for this employee in this shift
             String position = "Unknown";
-            for (Map.Entry<Position, Employee> entry : shift.getAllAssignedEmployees().entrySet()) {
-                if (entry.getValue().getId().equals(employee.getId())) {
-                    position = entry.getKey().getName();
+            for (Map.Entry<String, String> entry : shift.getAssignments().entrySet()) {
+                if (entry.getValue().equals(employee.getFullName())) {
+                    position = entry.getKey();
                     break;
                 }
             }
-            displayMessage(shift.getDate().format(dateFormatter) + " - " + shiftType +
+            displayMessage(shift.getDate().format(dateFormatter) + " - " + shift.getShiftType() +
                     " - Position: " + position);
         }
     }
-    /**
-     * Display details for a specific shift
-     */
+
+
     private void displayShiftDetails() {
         displayTitle("Shift Details");
         // Select shift
-        Shift shift = selectShift();
+        ShiftDTO shift = selectShift();
         if (shift == null) {
             return;
         }
         displayShiftDetailsFull(shift);
     }
-    /**
-     * Generate a shift history report
-     */
+
     private void generateShiftHistoryReport() {
         displayTitle("Generate Shift History Report");
         // Define report period
@@ -151,22 +131,16 @@ public class ShiftHistoryScreen {
             return;
         }
         // Get all shifts
-        List<Shift> allShifts = employeeService.getAllShifts();
+        List<ShiftDTO> allShifts = employeeService.getAllShiftsAsDTO();
         // Filter shifts for the period
-        List<Shift> periodShifts = allShifts.stream()
-                .filter(shift -> !shift.getDate().isBefore(startDate) && !shift.getDate().isAfter(endDate))
-                .sorted((s1, s2) -> s1.getDate().compareTo(s2.getDate()))
-                .toList();
+        List<ShiftDTO> periodShifts = allShifts.stream().filter(shift -> !shift.getDate().isBefore(startDate) && !shift.getDate().isAfter(endDate)).sorted(Comparator.comparing(ShiftDTO::getDate)).collect(Collectors.toList());
         if (periodShifts.isEmpty()) {
             displayMessage("No shifts found for the selected period");
             return;
         }
-        displayTitle("Shift History Report: " + startDate.format(dateFormatter) +
-                " to " + endDate.format(dateFormatter));
+        displayTitle("Shift History Report: " + startDate.format(dateFormatter) + " to " + endDate.format(dateFormatter));
         // Count shifts by day
-        Map<LocalDate, Long> shiftCountByDay = periodShifts.stream()
-                .collect(java.util.stream.Collectors.groupingBy(
-                        Shift::getDate, java.util.stream.Collectors.counting()));
+        Map<LocalDate, Long> shiftCountByDay = periodShifts.stream().collect(Collectors.groupingBy(ShiftDTO::getDate, Collectors.counting()));
         // Display summary
         displayMessage("Total shifts in period: " + periodShifts.size());
         displayMessage("Shifts by date:");
@@ -175,52 +149,45 @@ public class ShiftHistoryScreen {
         }
         // Ask if detailed report is wanted
         if (getBooleanInput("Display detailed shift information?")) {
-            for (Shift shift : periodShifts) {
+            for (ShiftDTO shift : periodShifts) {
                 displayShiftDetailsFull(shift);
             }
         }
     }
-    /**
-     * Display full details for a shift
-     * @param shift The shift to display
-     */
-    private void displayShiftDetailsFull(Shift shift) {
+
+    private void displayShiftDetailsFull(ShiftDTO shift) {
         displayTitle("Shift Details: " + shift.getDate().format(dateFormatter) + " - " +
-                shift.getShiftType().toString());
+                shift.getShiftType());
         displayMessage("Shift ID: " + shift.getId());
         displayMessage("Date: " + shift.getDate().format(dateFormatter));
-        displayMessage("Type: " + shift.getShiftType().toString());
+        displayMessage("Type: " + shift.getShiftType());
         displayMessage("Start Time: " + shift.getStartTime());
         displayMessage("End Time: " + shift.getEndTime());
 
         // Display shift manager
-        Employee shiftManager = shift.getShiftManager();
-        if (shiftManager != null) {
-            displayMessage("Shift Manager: " + shiftManager.getFullName() + " (ID: " + shiftManager.getId() + ")");
+        if (shift.hasShiftManager()) {
+            displayMessage("Shift Manager: " + shift.getShiftManagerName() + " (ID: " + shift.getShiftManagerId() + ")");
         } else {
             displayMessage("Shift Manager: Not assigned");
         }
 
         // Display assigned employees
-        Map<Position, Employee> assignments = shift.getAllAssignedEmployees();
+        Map<String, String> assignments = shift.getAssignments();
 
         if (assignments.isEmpty()) {
             displayMessage("Assigned Employees: None");
         } else {
             displayMessage("\nAssigned Employees:");
-            for (Map.Entry<Position, Employee> entry : assignments.entrySet()) {
-                Position position = entry.getKey();
-                Employee employee = entry.getValue();
-                displayMessage("- " + position.getName() + ": " + employee.getFullName() + " (ID: " + employee.getId() + ")");
+            for (Map.Entry<String, String> entry : assignments.entrySet()) {
+                String position = entry.getKey();
+                String employee = entry.getValue();
+                displayMessage("- " + position + ": " + employee);
             }
         }
     }
-    /**
-     * Select an employee from the list of employees
-     * @return The selected employee or null if canceled
-     */
-    private Employee selectEmployee() {
-        List<Employee> employees = employeeService.getAllEmployees();
+
+    private EmployeeDTO selectEmployee() {
+        List<EmployeeDTO> employees = employeeService.getAllEmployees();
         if (employees.isEmpty()) {
             displayError("No employees in the system");
             return null;
@@ -228,7 +195,7 @@ public class ShiftHistoryScreen {
         // Build array of names for display in menu
         String[] employeeNames = new String[employees.size()];
         for (int i = 0; i < employees.size(); i++) {
-            Employee emp = employees.get(i);
+            EmployeeDTO emp = employees.get(i);
             employeeNames[i] = emp.getFullName() + " (ID: " + emp.getId() + ")";
         }
         int choice = displayMenu("Select Employee", employeeNames);
@@ -237,12 +204,10 @@ public class ShiftHistoryScreen {
         }
         return employees.get(choice - 1);
     }
-    /**
-     * Select a shift from the list of shifts
-     * @return The selected shift or null if canceled
-     */
-    private Shift selectShift() {
-        List<Shift> shifts = employeeService.getAllShifts();
+
+
+    private ShiftDTO selectShift() {
+        List<ShiftDTO> shifts = employeeService.getAllShiftsAsDTO();
 
         if (shifts.isEmpty()) {
             displayError("No shifts defined in the system");
@@ -253,9 +218,9 @@ public class ShiftHistoryScreen {
         // Build array of descriptions for display in menu
         String[] shiftDescriptions = new String[shifts.size()];
         for (int i = 0; i < shifts.size(); i++) {
-            Shift shift = shifts.get(i);
+            ShiftDTO shift = shifts.get(i);
             shiftDescriptions[i] = shift.getDate().format(dateFormatter) + " - " +
-                    shift.getShiftType().toString();
+                    shift.getShiftType();
         }
         int choice = displayMenu("Select Shift", shiftDescriptions);
         if (choice == 0) {
@@ -263,11 +228,7 @@ public class ShiftHistoryScreen {
         }
         return shifts.get(choice - 1);
     }
-    /**
-     * Get a date input from the user
-     * @param prompt The prompt to display
-     * @return The entered date or null if invalid
-     */
+
     private LocalDate getDateInput(String prompt) {
         try {
             String dateStr = getInput(prompt);
@@ -276,88 +237,5 @@ public class ShiftHistoryScreen {
             displayError("Invalid date format. Please use DD/MM/YYYY");
             return null;
         }
-    }
-    /**
-     * Display a menu and get user choice
-     * @param title Menu title
-     * @param options Menu options
-     * @return User's choice (0 for back)
-     */
-    private int displayMenu(String title, String[] options) {
-        displayTitle(title);
-        for (int i = 0; i < options.length; i++) {
-            System.out.println((i + 1) + ". " + options[i]);
-        }
-        System.out.println("0. Back");
-
-        int choice;
-        do {
-            choice = getIntInput("Select option");
-        } while (choice < 0 || choice > options.length);
-        return choice;
-    }
-    /**
-     * Display a title with emphasis
-     * @param title Title to display
-     */
-    private void displayTitle(String title) {
-        System.out.println("\n===== " + title + " =====");
-    }
-
-    /**
-     * Display a message to the user
-     * @param message Message to display
-     */
-    private void displayMessage(String message) {
-        System.out.println(message);
-    }
-    /**
-     * Display an error message to the user
-     * @param error Error message
-     */
-    private void displayError(String error) {
-        System.out.println("Error: " + error);
-    }
-    /**
-     * Get text input from user
-     * @param prompt Input prompt
-     * @return Text entered by user
-     */
-    private String getInput(String prompt) {
-        System.out.print(prompt + ": ");
-        return scanner.nextLine();
-    }
-    /**
-     * Get integer input from user
-     * @param prompt Input prompt
-     * @return Integer entered by user
-     */
-    private int getIntInput(String prompt) {
-        while (true) {
-            try {
-                System.out.print(prompt + ": ");
-                return Integer.parseInt(scanner.nextLine());
-            } catch (NumberFormatException e) {
-                displayError("Please enter a valid number");
-            }
-        }
-    }
-
-    /**
-     * Get boolean input from user (yes/no)
-     * @param prompt Input prompt
-     * @return true if user entered "yes", false otherwise
-     */
-    private boolean getBooleanInput(String prompt) {
-        System.out.print(prompt + " (yes/no): ");
-        String input = scanner.nextLine().trim().toLowerCase();
-        return input.equals("yes") || input.equals("y") || input.equals("כן");
-    }
-    /**
-     * Close resources when screen is no longer needed
-     */
-    public void close() {
-        // Note: Only the main application should close the scanner
-        // to prevent premature closing
     }
 }
